--- a/build.gradle
+++ b/build.gradle
@@ -26,16 +26,27 @@ configurations {
 	providedRuntime
 }
 
+eclipse {
+    classpath {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
 dependencies {
-	//compile('org.springframework.boot:spring-boot-starter-jdbc')
+	 //compile('org.springframework.boot:spring-boot-starter-jdbc')
 	 compile('org.springframework.boot:spring-boot-starter-web')
      compile("org.springframework.boot:spring-boot-starter-thymeleaf")
      compile("org.springframework.boot:spring-boot-devtools")
 	 providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	 testCompile('org.springframework.boot:spring-boot-starter-test')
     //compile group: 'commons-io', name: 'commons-io', version: '2.4'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
+     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
+  // compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.7.RELEASE'
+  // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+     testCompile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11.2'
+  
 
 
 	
