--- a/bin/application.properties
+++ b/bin/application.properties
@@ -1,1 +1,16 @@
 spring.profiles.active=NAB
+
+spring.datasource.url=jdbc:informix-sqli://10.6.2.195:3366/ispeedy:INFORMIXSERVER=informixdev;IFX_USE_STRENC=TRUE;IFX_LOCK_MODE_WAIT=30
+#jdbc:informix-sqli://10.7.6.130:3366/ispeedy:INFORMIXSERVER=bneinformix01;IFX_USE_STRENC=TRUE;IFX_LOCK_MODE_WAIT=
+spring.datasource.username=ispeedy
+spring.datasource.password=mystery1
+#bmmini01
+jdbc.driverClassName=com.informix.jdbc.IfxDriver
+#spring.datasource.driver-class-name=com.informix.jdbc.IfxDriver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.InformixDialect
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=update
+hibernate.generate_statistics=true
