--- a/bin/application.properties
+++ b/bin/application.properties
@@ -1,6 +1,8 @@
 #spring.profiles.active=NAB
-fpos.entity.name=XY
+#fpos.entity.name=XY
 fpos.bank.name=NAB
+fpos.logs.url.nab=/Users/betwar/Desktop/PC_EFT_XY
+fpos.logs.url.westpac=/Users/Betwar/Desktop/Elixer
 #spring.datasource.url=jdbc:informix-sqli://10.6.2.194:3366/ispeedy:INFORMIXSERVER=informixdev;IFX_USE_STRENC=TRUE;IFX_LOCK_MODE_WAIT=30
 #jdbc:informix-sqli://10.7.6.130:3366/ispeedy:INFORMIXSERVER=bneinformix01;IFX_USE_STRENC=TRUE;IFX_LOCK_MODE_WAIT=
 spring.datasource.username=ispeedy
@@ -22,3 +24,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+logging.level.org.springframework.web=ERROR
+logging.level.net.contal.spring=DEBUG
+
+#logging.file=~/temp/application.log
