--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,14 @@ buildscript {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
+//def bank = 'westpac'
+
 
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'war'
+
 
 version = '0.5.0-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -32,6 +35,11 @@ eclipse {
         downloadSources = true
     }
 }
+
+//bootRun {
+//   jvmArgs = ["-Dfpos.bank.name="+bank]
+//}
+
 
 dependencies {
 
