--- a/bin/application.properties
+++ b/bin/application.properties
@@ -1,6 +1,6 @@
 #spring.profiles.active=NAB
 #fpos.entity.name=XY
-fpos.bank.name=WESTPAC
+fpos.bank.name=NAB
 fpos.logs.url.nab=/Users/betwar/Desktop/PC_EFT_XY
 fpos.logs.url.westpac=/Users/Betwar/Desktop/Elixer
 #spring.datasource.url=jdbc:informix-sqli://10.6.2.194:3366/ispeedy:INFORMIXSERVER=informixdev;IFX_USE_STRENC=TRUE;IFX_LOCK_MODE_WAIT=30
@@ -23,7 +23,7 @@ spring.datasource.url=jdbc:h2:file:~/h2_dockets;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EX
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 
 logging.level.org.springframework.web=ERROR
