--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.profiles.active=NAB
 #fpos.entity.name=XY
 fpos.bank.name=NAB
-fpos.logs.url.nab=/Users/betwar/Desktop/PC_EFT_XY
+fpos.logs.url.nab=C:\\PC_EFT_XY
 fpos.logs.url.westpac=/Users/Betwar/Desktop/Elixer
 #spring.datasource.url=jdbc:informix-sqli://10.6.2.194:3366/ispeedy:INFORMIXSERVER=informixdev;IFX_USE_STRENC=TRUE;IFX_LOCK_MODE_WAIT=30
 #jdbc:informix-sqli://10.7.6.130:3366/ispeedy:INFORMIXSERVER=bneinformix01;IFX_USE_STRENC=TRUE;IFX_LOCK_MODE_WAIT=
