--- a/bin/application.properties
+++ b/bin/application.properties
@@ -1,6 +1,6 @@
 #spring.profiles.active=NAB
 #fpos.entity.name=XY
-fpos.bank.name=NAB
+fpos.bank.name=WESTPAC
 fpos.logs.url.nab=C:\\PC_EFT
 fpos.logs.url.westpac=C:\\PC_EFT
 #spring.datasource.url=jdbc:informix-sqli://10.6.2.194:3366/ispeedy:INFORMIXSERVER=informixdev;IFX_USE_STRENC=TRUE;IFX_LOCK_MODE_WAIT=30
