--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,16 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'war'
 
 
-version = '0.5.0-SNAPSHOT'
+version = '0.8.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+}
+
+war {
+   baseName = 'efpos-logs' 
+   
 }
 
 configurations {
