--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'war'
 
 
-version = '0.8.0-SNAPSHOT'
+version = '1.0.1-westpac'
 sourceCompatibility = 1.8
 
 repositories {
